--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 </section>
     <section class="pai">
- <div class="passado"> 
+ <div class="passado de todos nós"> 
     <p> <b>passado</b> </p>
     <img src="imagem/imagem1b.jpeg">
     <span> Bora tentar fazer <br>o possível na vida <br> e lutar cada vez mais </span>
