--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="corpo">
-    <img src="imagem/Imag_prin.webp" alt=" Principal" width="600px" height="300px">
+    <img class="imagem" src="imagem/Imag_prin.webp" alt=" Principal">
     <div class="image_separados">
   <div class="img_1"> 
     <img src="imagem/img1_a.webp" alt="Seg" width="100" height="100">
@@ -33,7 +33,7 @@
 
    <div class="img_2"> 
     <img src="imagem/img2a.jpeg" alt="Terc"  width="100" height="100">
-    <span> <b>A vida é boa </b> </span>
+    <span> <b>A vida é boa quando estamos feliz </b> </span>
     <p> Paragrafo para <br>diser alguma coisa <br>sobre a vida</p>
      </div>
 
